RELEASE 0.99.9:

    BUG FIXES:

    * expression_plot_symbol and expression_profiles symbol used the default
value of col.palette and colourF instead of forwarding the user-defined one
to the expression_plot and expression_profiles functions.

    GENERAL UPDATES:

    * Added cross-reference in UsersGuide to point at examples of usages of
factor and numeric values for the expression plots


RELEASE 0.99.8:

    GENERAL UPDATES:

    * Resaved R data files to reduced package disk size. No more WARNING in
R CMD check.

    GENERAL UPDATES:

    # Removed reference to GitHub in the README file. The weblink is given
in the DESCRIPTION file anyway if users are interested.


RELEASE 0.99.7:

    UPDATED FEATURES:

    * fixed a typo in the code of heatmap_GO which made it crash for any other
dataset than the example dataset.

RELEASE 0.99.6:

    UPDATED FEATURES:

    * expression_profiles_symbol() method was missing the "index" argument to
select the feature identifier to plot alone.


RELEASE 0.99.5:

    NEW FEATURES:

    * expression_profiles() method plots the expression profiles of individual
samples series, as opposed to grouped samples series handled by 
expression_plot functions.

    * expression_profiles_symbol() method plots the expression profiles of
individual samples series using a gene name instead of an Ensembl gene
identifier.

    UPDATED FEATURES:
    
    * overlap_GO can print to screen, if filename argument is set to NULL 
(Default).

    * heatmap_GO, cluter_GO and plot_design can resize title font and wrap the
text on multiple lines.

    * expression_plot and expression_plot_symbol can orient X axis labels at
a given angle.

    * replaced return(NULL) statement by stop() when no close match is found to
a gene name in the family of expression_plot functions.

    GENERAL UPDATES:

    * User's Guide updated.

    * List of contributors updated in User's Guide and DESCRIPTION.


RELEASE 0.99.4:

    UPDATED FEATURES:
    