@@ -30,7 +30,7 @@ visualise the statistics on a gene- and ontology-basis.
     Package: \tab GOexpress\cr
     Type: \tab Package\cr
     Version: \tab 0.99.9\cr
-    Date: \tab 2014-09-16\cr
+    Date: \tab 2014-09-18\cr
     License: \tab  GPL (>= 3)\cr
     }
     This package requires only two input variables
